# light_link

./: .gitignore  .gitmodules  CLAUDE.md  README.md  RPC_TEST_PLAN.md  go.mod  go.sum  go.work  go.work.sum  test_rpc_client.go  test_rpc_services.bat
.claude/commands/: united-debug-provider.md  united-debug.md
console/server/: console.yaml  main.go
console/web/: vite.config.ts
deploy/nats/: README.md  nats-server.conf
docs/: PFX_CERTIFICATE.md  PLATFORM_STARTUP_GUIDE.md  TLS_FIX_PLAN.md  caller-dependency-check.md  getting-started.md  implementation-plan-auto-tls.md  implementation-plan.md  sdk-api-comparison.md  service-management-platform.md
docs/plans/: 2024-12-26-p1-caller-csharp.md  2024-12-26-p1-caller-python.md  2024-12-26-p1-file-transfer.md  2024-12-26-p1-state-kv.md  2024-12-26-p2-backup.md  2024-12-26-p2-notify-pubsub.md  2024-12-26-p2-python-sdk-state.md  2024-12-26-p3-cpp.md  2024-12-26-restore-csharp-client.md  2025-01-23-light-link-framework.md  2025-01-24-remote-nats-config.md  2025-12-26-caller-dependency-check.md  2025-12-26-openapi-and-ui-improvements.md  README.md  tls-certificate-automation.md
examples/: config.go
examples/backup-demo/: main.go
examples/backup-incremental-demo/: main.go
examples/backup-largefile-demo/: main.go
examples/file-transfer-demo/: main.go
light_link_platform/: README.md  start-all-providers.bat  start-all.bat
platform_examples/: README.md
sdk/cpp/: CMakeLists.txt
sdk/cpp/examples/: pubsub_demo.cpp  rpc_demo.cpp
sdk/cpp/include/lightlink/: client.hpp
sdk/cpp/src/: client.cpp
(+179 files in other folders)
